--- a/src/index.html
+++ b/src/index.html
@@ -107,8 +107,8 @@
       <div class="container_nav">
         <nav>
           <li id="l1"><a href="#">HOME</a></li>
-          <li id="l2"><a href="#I_am">SOBRE MIN</a></li>
-          <li id="l3"><a href="#MyProject1">MEUS PROJETOS</a></li>
+          <li id="l2"><a href="#I_am">About me</a></li>
+          <li id="l3"><a href="#MyProject1">My Projects</a></li>
         </nav>
       </div>
     </header>
